--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 article {
-    background:  #0000;;
+    background:  #0000;
 }
 header {
-  width: 100%;
-  background-color: #337DFF;
+  width:100%;
+  background-color:#337DFF;
+}
+.sources {
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
 }
