--- a/style.css
+++ b/style.css
@@ -6,7 +6,16 @@ header {
   background-color:#337DFF;
 }
 .sources {
-  border-style: solid;
-  border-width: 5px;
+  border: exist;
+  border-width: medium;
   border-color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+section.main {
+  margin-left: auto;
+  margin-right: auto;
+}
+img {
+  float:left;
 }
